# supa-shell

./: Cargo.toml  README.md  output.txt
src/: main.rs
