[package]
name = "supa-shell"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
default-run = "supa"

[dependencies]
anyhow = "1.0.68"                         
bytes = "1.3.0"                               
home = "0.5.9"
shlex = "1.3.0"
terminal_size = "0.4.1"
termion = "4.0.3"
thiserror = "1.0.38"                        

[[bin]]
name = "supa"
path = "src/main.rs"
